# data-analytics-engineer-test

./: .gitignore  .pre-commit-config.yaml  .tool-versions  Analysis.ipynb  Analytics Engineer Final.ipynb  Analytics Engineer Test Final.ipynb  Analytics Engineer Test.ipynb  LICENSE.md  README.md  Resultados.md  Solution.md  Test.md  dbt_project.yml  main.py  profiles.yml  pyproject.toml  questao1.py  questao2-exec.sql  questao2-setup.py  questao3.ipynb  questao4.sql  questao5.sql  requirements.txt  setup_repository.md  test_analytics_engineer.py  utilidades.md
.github/: workflows
Country/: country_create_table.py
Exercicio_1/: Exercicio1_import_data.py
Exercicio_2/: Exercício2.sql
Exercicio_3/: Exercício3.sql
Exercicio_4/: Exercício4.sql
Exercicio_5/: Exercício5.sql
Infra/: database.py  database_utils.py
League/: league_create_table.py
Match/: match_create_table.py
Match_Modified/: match_modified_create_table.py
Output/: Questao_3B_Analise_I_Destro_Canhoto.csv  Questao_3C_Analise_II_Pais_Melhor_Media_Gols.csv  Questao_3C_Analise_II_Pais_Melhor_Saldo_Gols.csv  Questao_3D_Analise_III_Time_Media_Casa.csv  Questao_3D_Analise_III_Time_Media_Geral.csv  Questao_3E_Analise_III_Time_Media_Visitante.csv  Questao_3E_Analise_IV_Media_Gols_Temporada_Pais.csv  Questao_3F_Estatística de cartões e falta - Por Cartao.csv  Questao_3F_Estatística de cartões e falta - Por Falta.csv  Questao_3F_Estatística de cartões e falta - Por Porcentagem.csv  Questao_4A_Relations_I_Altura_x_Desempenho.csv  Questao_4A_Relations_I_Peso_x_Desempenho.csv  Questao_4B_Relations_II_Idade_x_Desempenho.csv  Questao_5_Ouput.csv  Questao_5_Ouput.xlsx  Questão 2B - Team_Attributes_Modified.csv  Questão 2C - Match_Modified.csv
Player/: player_create_table.py
Player_Attributes/: player_attributes_create_table.py
Player_Attributes_Modified/: player_attributes_modified_create_table.py
Python/: create_tables.py  import_match_cards.py  import_match_fouls.py  import_tables.py
Query/: Questão 2A - Create table Player_Attributes_Modified.sql  Questão 2A - Insert into Player_Attributes_Modified.sql  Questão 2B - Create table Team_Attributes_Modified.sql  Questão 2B - Insert into Team_Attributes_Modified.sql  Questão 2C - Create table Match_Modified.sql  Questão 2C - Insert into Match_Modified.sql  Questão 3A - Limpeza.sql  Questão 3B - Análise I - Proporção e Comparação Destro x Canhoto.sql  Questão 3C - Análise II - Saldo de Gols e Média de Gols por jogo por país.sql  Questão 3D - Análise III - Time com melhor média de gols.sql  Questão 3E - Análise IV - Média de gols por temporada.sql  Questão 3F - Análise V - Estatísticas de cartões e faltas.sql  Questão 4A - Relations I - Relação Altura-Peso x Desempenho.sql  Questão 4B - Relations II - Relação Idade x Desempenho.sql  Questão 5 - SQL CTE - Média de Gols por semana.sql
README_and_Bonus/: README.md
Relations/: relations_create_table.py
Solution/: README.md
Solution/Scripts/: 01_import_data.ipynb  02_modified_tables.ipynb  (+3 more)
Solução/: Readme_etapa1  Readme_etapa2  Readme_etapa3  Readme_etapa4  Readme_etapa5  etapa_5.py  exeutar_python_etapa_5.sh
Team/: team_create_table.py
Team_Attributes/: team_attributes_create_table.py
Team_Attributes_Modified/: team_attributes_modified_create_table.py
analyses/: distinct_ids_stg_teams.sql  distinct_ids_stg_teams_attributes.sql  goals_grouped_per_season_and_country.sql  proportion_of_preferred_foot.sql  win_percentage_home_away.sql
config-scripts/: setup-linus-wsl2__python.sh  setup-linux-wsl2.sh  setup-linux-wsl2__adsf.sh
models/: sources.yml
python_scripts/: extract_and_load.py  test_extract_and_load.py  unzip.py
(+25 files in other folders)
