[tool.poetry]
name = "data-analytics-engineer-test"
version = "0.1.0"
description = ""
authors = ["Gustavo Oliveira <g.alvs.oliveira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.3.3"
black = "^22.3.0"
pylint = "^2.17.5"
rarfile = "^4.0"
pandas = "^2.0.3"
dbt-sqlite = "1.4.0"
dbt-core = "1.4.0"
sqlfluff-templater-dbt = "^2.3.0"
sqlfluff = "^2.3.0"
googletrans = "^3.0.0"
nltk = "^3.8.1"

[tool.sqlfluff.core]
dialect = "sqlite"
templater = "dbt"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl"
exclude_rules = "RF04"
max_line_length = 180
large_file_skip_byte_limit = 22200

[tool.sqlfluff.indentation]
indented_joins = true
indented_using_on = true
template_blocks_indent = false

[tool.sqlfluff.templater]
unwrap_wrapped_queries = true

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.functions]
extended_capitalisation_policy = "upper"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
