[tool.poetry]
name = "data-analytics-engineer-test"
version = "0.1.0"
description = ""
authors = ["Gustavo Oliveira <g.alvs.oliveira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^22.3.0"
pylint = "^2.17.5"
rarfile = "^4.0"
pandas = "^2.0.3"
dbt-sqlite = "1.4.0"
dbt-core = "1.4.0"
sqlfluff-templater-dbt = "^2.3.0"
sqlfluff = "^2.3.0"
googletrans = "^3.0.0"
nltk = "^3.8.1"

[tool.sqlfluff.core]
dialect = "sqlite"
templater = "dbt"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl"
exclude_rules = "RF04"
max_line_length = 180
large_file_skip_byte_limit = 22200

[tool.sqlfluff.indentation]
indented_joins = true
indented_using_on = true
template_blocks_indent = false

[tool.sqlfluff.templater]
unwrap_wrapped_queries = true

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.functions]
extended_capitalisation_policy = "upper"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.3"
notebook = "^6.4.12"
ipykernel = "^6.15.3"

[tool.poetry.group.code_quality.dependencies]
pylint = "^2.14.5"
black = "^22.6.0"

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.pylint.messages_control]
max-line-length = 120
max-attributes=9
disable = [
  "missing-docstring",
  "pointless-statement",
  "too-many-arguments",
  "duplicate-code",
  "expression-not-assigned",
  "bare-except",
  "consider-using-dict-items",
  "too-many-lines",
  "protected-access",
  "too-many-locals",
  "import-error",
  "import-outside-toplevel",
  "unused-argument",
  "too-many-branches",
  "broad-except",
  "logging-fstring-interpolation",
  "consider-using-generator"
]

[tool.pylint.BASIC]
good-names= [
  "df",
  "db",
  "dt",
  "id",
  "data-etl",
  "i",
  "j",
]

[tool.pylint.master]
init-hook = 'import sys; sys.path.append("./python_scripts")'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
